--- a/templates/listeView.html.twig
+++ b/templates/listeView.html.twig
@@ -1,17 +1,20 @@
 {% extends 'base.html.twig' %}
 {% block title 'Mes articles' %}
 {% block body %}
+  <a class="btn btn-danger text-white ml-5 my-4" href="{{ path('app_logout') }}">Déconnexion</a>
+  <div class="d-flex justify-content-center">
     {% for article in articles %}
-      <div class="d-flex justify-content-center">
-        <div class="card text-center mt-5" style="width: 18rem;">
-          <div class="card-body">
-              <p>Article numéro : {{article.id}}</p>
-              <h5 class="card-title text-danger text-center">{{ article.Titre }}</h5>
-              <p class="card-text">{{ article.Contenu }}</p>
-              <a href="single/{{ article.id }}" class="btn btn-primary">Détail</a>
+        <div class="d-flex justify-content-center">
+          <div class="card text-center m-5" style="width: 18rem;">
+            <div class="card-body">
+                <p>Article numéro : {{article.id}}</p>
+                <h5 class="card-title text-danger text-center">{{ article.Titre }}</h5>
+                <p class="card-text">{{ article.Contenu }}</p>
+                <a href="single/{{ article.id }}" class="btn btn-primary">Détail</a>
+            </div>
           </div>
         </div>
-      </div>
     {% endfor %}
-    {% endblock %}
+  </div>
+{% endblock %}
 
