--- a/templates/singleView.html.twig
+++ b/templates/singleView.html.twig
@@ -1,18 +1,16 @@
 {% extends 'base.html.twig' %}
 {% block title 'Mon article' %}
   {% block body %}
+  <a class="btn btn-danger text-white ml-5 my-4" href="{{ path('app_logout') }}">Déconnexion</a>
       <div class="d-flex justify-content-center">
         <div class="card text-center" style="width: 18rem;">
           <div class="card-body">
-            {% for article in article %}
-              <p class="card-text">{{ article.id }}</p>
-              <h5 class="card-title text-danger text-center">{{ article.Titre }}</h5>
+              <h4 class="card-title text-danger text-center">{{ article.Titre }}</h4>
               <p class="card-text">{{ article.Contenu }}</p>
               <p class="card-text">Créer le : {{ article.Création }}</p>
               <p class="card-text">Auteur : {{ article.Auteur }}</p>
-              <p class="card-text">Ca&tégorie : {{ article.Catégorie }}.</p>
+              <p class="card-text">Catégorie : {{ article.Catégorie }}</p>
               <p class="card-text">Vue : {{ article.NbVue }} fois.</p>
-            {% endfor %}
           </div>
         </div>
       </div>
